--- a/debian/control
+++ b/debian/control
@@ -2,14 +2,14 @@ Source: debreate
 Section: devel
 Priority: optional
 Maintainer: Jordan Irwin <antumdeluge@gmail.com>
-Build-Depends: debhelper (>=9), python
+Build-Depends: debhelper (>=9), python|python3
 Standards-Version: 3.9.7
 Homepage: https://antumdeluge.github.io/debreate-web/
 X-Python-Version: >= 2.6
 
 Package: debreate
 Architecture: all
-Depends: ${misc:Depends}, python2.7, python-wxgtk3.0|python-wxgtk2.8, fakeroot, dpkg (>=1.0.0), file, util-linux (>=2.0.0), debianutils (>=4.0.0)
+Depends: ${misc:Depends}, python2.7, python-wxgtk3.0|python-wxgtk2.8|python3-wxgtk4.0, fakeroot, dpkg (>=1.0.0), file, util-linux (>=2.0.0), debianutils (>=4.0.0)
 Recommends: lintian, coreutils (>=8.0), xdg-utils, man-db, gzip (>=1.0), binutils, gvfs-bin, x11-server-utils
 Suggests: gdebi|gdebi-kde
 Description: Debian Package Builder
