--- a/install.conf
+++ b/install.conf
@@ -2,7 +2,9 @@
 executable = init.py
 files_main = command_line.py;main.py
 dirs_main = dbr;f_export;fields;globals;input;startup;system;ui;wiz;wizbin
-dirs_data = bitmaps;
+dirs_data = bitmaps;templates
 files_doc = docs/LICENSE.txt;docs/changelog;docs/usage.pdf
 files_man = man/man1/debreate.1
 files_extra = README.md;INFO
+dbp_mime = x-dbp
+dbp_mime_prefix = application
