Deprecate dbr.log.DebreateLogger in favor of util.logger.Logger

--- a/build.conf
+++ b/build.conf
@@ -1,7 +1,7 @@
 
 executable = init.py
 files_main = command_line.py;main.py
-dirs_main = dbr;f_export;fields;globals;input;startup;system;ui;wiz;wizbin
+dirs_main = dbr;f_export;fields;globals;input;startup;system;ui;util;wiz;wizbin
 dirs_data = bitmaps;templates
 files_doc = docs/LICENSE.txt;docs/changelog;docs/usage.pdf
 files_man = man/man1/debreate.1
