--- a/build.conf
+++ b/build.conf
@@ -1,4 +1,7 @@
 
+package_name = debreate
+package_version = 0.8
+
 executable = init.py
 files_main = command_line.py;main.py
 dirs_main = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wiz;wizbin
