--- a/debian/control
+++ b/debian/control
@@ -9,7 +9,7 @@ X-Python-Version: >= 3.0
 
 Package: debreate
 Architecture: all
-Depends: ${misc:Depends}, python3, python3-wxgtk4.1 (>=4.1.1)|python3-pip, fakeroot, dpkg (>=1.0.0), file, util-linux (>=2.0.0), debianutils (>=4.0.0)
+Depends: ${misc:Depends}, python3, python3-wxgtk4.1|python3-wxgtk4.0 (>=4.0.7)|python3-pip, fakeroot, dpkg (>=1.0.0), file, util-linux (>=2.0.0), debianutils (>=4.0.0)
 Recommends: python3-wxgtk4.1 (>=4.1.1), lintian, coreutils (>=8.0), xdg-utils, man-db, gzip (>=1.0), binutils, gvfs-bin, x11-server-utils
 Suggests: gdebi|gdebi-kde
 Description: Debian Package Builder
