Add mypy exception

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -9,3 +9,6 @@ ignore_missing_imports = True
 
 [mypy-globals.errorcodes]
 disable_error_code = attr-defined
+
+[mypy-libdbr.logger]
+disable_error_code = assignment,arg-type
