--- a/.github/workflows/deploy_release.yml
+++ b/.github/workflows/deploy_release.yml
@@ -18,10 +18,10 @@ jobs:
         shell: bash
 
     steps:
-      - name: Checkout
+      - name: checkout
         uses: actions/checkout@v3
 
-      - name: Configure
+      - name: configure
         run: |
           version=$(echo ${{ github.ref_name }})
           if [[ "${version}" =~ ^v[0-9] ]]; then
@@ -33,20 +33,23 @@ jobs:
           echo "configuring character generator version ${version} ..."
           echo "ver=${version}" >> $GITHUB_ENV
 
-      - name: Install Build Dependencies
+      - name: install build dependencies
         run: sudo apt install debhelper devscripts
 
-      - name: Build Portable Package
+      - name: build portable package
         run: python3 build.py -t portable
 
-      - name: Build .deb Package
+      - name: build .deb package
         run: python3 build.py -t deb-bin
 
-      - name: Publish
+      - name: prepare release information
+        run: echo "Changes:\n\n$(python3 build.py -t print-changes)" > release_notes.tmp
+
+      - name: publish
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')
         with:
           name: 'Version ${{ env.ver }}'
-          #~ body_path: release_notes.tmp
+          body_path: release_notes.tmp
           files: build/dist/*
           prerelease: true
