--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -3,12 +3,13 @@ name: Code Quality Check
 
 on:
   push:
-    branches: [master]
+    branches: [workflow_tests]
   pull_request:
     branches: [master]
+  workflow_dispatch:
 
 jobs:
-  wx-4-0:
+  wx-4-0-ubuntu:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -29,7 +30,7 @@ jobs:
       - name: check with Mypy
         run: mypy
 
-  wx-4-1-1:
+  wx-4-1-1-ubuntu:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -52,7 +53,7 @@ jobs:
       - name: check with Mypy
         run: mypy
 
-  wx-latest:
+  wx-latest-ubuntu:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -68,6 +69,59 @@ jobs:
           python3 -m pip install pylint mypy attrdict3
           # build fails if attrdict is not installed before preparing wxPython
           python3 -m pip install wxPython
+
+      - name: check with Pylint
+        run: pylint ./
+
+      - name: check with Mypy
+        run: mypy
+
+  #~ wx-latest-windows:
+    #~ runs-on: windows-2019
+    #~ defaults:
+      #~ run:
+        #~ shell: cmd
+
+    #~ steps:
+      #~ - name: checkout
+        #~ uses: actions/checkout@v3
+
+      #~ - name: setup Python
+        #~ uses: actions/setup-python@v3.1.3
+
+      #~ - name: setup dependencies
+        #~ run: |
+          #~ python -m pip install wheel setuptools attrdict3 requests pylint mypy
+          #~ python -m pip install wxPython
+
+      #~ - name: check with Pylint
+        #~ run: python -m pylint ./
+
+      #~ - name: check with Mypy
+        #~ run: python -m mypy
+
+  wx-latest-msys:
+    runs-on: windows-2019
+    defaults:
+      run:
+        shell: msys2 {0}
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: setup MSYS2 & dependencies
+        uses: msys2/setup-msys2@v2
+        with:
+          update: true
+          install: >-
+            mingw-w64-x86_64-wxPython
+            mingw-w64-x86_64-python-pylint
+            mingw-w64-x86_64-mypy
+
+      #~ - name: setup dependencies
+        #~ run: |
+            #~ pacman -S --noconfirm mingw-w64-x86_64-wxPython mingw-w64-x86_64-python-pylint mingw-w64-x86_64-mypy
 
       - name: check with Pylint
         run: pylint ./
