--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -22,7 +22,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: run tests
-        run: python3 build.py -t run-tests
+        run: python3 build.py -t test
 
   unit-tests-windows:
     runs-on: windows-2019
@@ -38,7 +38,7 @@ jobs:
         uses: actions/setup-python@v3.1.3
 
       - name: run tests
-        run: python build.py -t run-tests
+        run: python build.py -t test
 
   unit-tests-msys:
     runs-on: windows-2019
@@ -58,4 +58,4 @@ jobs:
             mingw-w64-x86_64-python
 
       - name: run tests
-        run: python3 build.py -t run-tests
+        run: python3 build.py -t test
