Create Debian changelog dynamically in build task

--- a/.gitignore
+++ b/.gitignore
@@ -23,7 +23,7 @@ build
 INSTALLED
 
 # Debian dist files
-#debian/changelog
+debian/changelog
 debian/debreate
 debian/debhelper-build-stamp
 debian/debreate.debhelper.log
