--- a/build.conf
+++ b/build.conf
@@ -15,3 +15,6 @@ files_extra = README.md;INFO
 # Debreate project mimetype data
 dbp_mime = x-dbp
 dbp_mime_prefix = application
+
+# info for Debian changelog
+deb_info = dist=jammy;author=Jordan Irwin;email=antumdeluge@gmail.com;urgency=low
