Add filename extension to changelog

--- a/build.conf
+++ b/build.conf
@@ -8,7 +8,7 @@ executable = init.py
 files_app = command_line.py;main.py
 dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wiz;wizbin
 dirs_data = bitmaps;templates
-files_doc = LICENSE.txt;docs/changelog;docs/usage.pdf
+files_doc = LICENSE.txt;docs/changelog.txt;docs/usage.pdf
 files_man = man/man1/debreate.1
 files_extra = README.md;INFO
 
