Move 'main' module to 'ui.main'

--- a/build.conf
+++ b/build.conf
@@ -5,7 +5,7 @@ version_dev = 5
 
 # distribution files
 executable = init.py
-files_app = command_line.py;main.py
+files_app = command_line.py
 dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wiz;wizbin
 dirs_data = bitmaps;templates
 files_doc = LICENSE.txt;docs/changelog.txt;docs/usage.pdf
