Finish dist-source build task

--- a/build.conf
+++ b/build.conf
@@ -3,7 +3,7 @@ package = debreate
 version = 0.8
 version_dev = 5
 
-# distribution files
+# files for installation
 executable = init.py
 files_app = command_line.py
 dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wiz;wizbin
@@ -11,6 +11,13 @@ dirs_data = bitmaps;templates
 files_doc = LICENSE.txt;docs/changelog.txt;docs/usage.pdf
 files_man = man/man1/debreate.1
 files_extra = README.md;INFO
+
+# files for distribution
+dirs_dist_py = dbr;f_export;fields;globals;input;lib;startup;system;tests;ui;util;wiz;wizbin
+dirs_dist_data = bitmaps;data;debian;docs;locale;man;scripts;templates
+files_dist_py = command_line.py
+files_dist_exe = init.py;build.py
+files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;Makefile;README.md;TODO.txt;.mypy.ini;.pylintrc
 
 # Debreate project mimetype data
 dbp_mime = x-dbp
