Include documentation with binary dist package

--- a/build.conf
+++ b/build.conf
@@ -19,6 +19,9 @@ files_dist_py = command_line.py
 files_dist_exe = init.py;build.py
 files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;Makefile;README.md;TODO.txt;.mypy.ini;.pylintrc
 
+dirs_bdist_data = docs;man
+files_bdist_data = LICENSE.txt
+
 # Debreate project mimetype data
 dbp_mime = x-dbp
 dbp_mime_prefix = application
