--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -9,7 +9,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  wx-4-0-ubuntu:
+  ubuntu-wx-apt:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -27,27 +27,7 @@ jobs:
       - name: check code
         run: python3 build.py -t check-code -V
 
-  wx-4-1-1-ubuntu:
-    runs-on: ubuntu-22.04
-    defaults:
-      run:
-        shell: bash
-
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
-
-      - name: setup dependencies
-        run: |
-          sudo apt install libgtk-3-dev
-          python3 -m pip install pylint mypy attrdict3
-          # build fails if attrdict is not installed before preparing wxPython
-          python3 -m pip install wxPython==4.1.1
-
-      - name: check code
-        run: python3 build.py -t check-code -V
-
-  wx-latest-ubuntu:
+  ubuntu-wx-pip:
     runs-on: ubuntu-22.04
     defaults:
       run:
@@ -67,7 +47,27 @@ jobs:
       - name: check code
         run: python3 build.py -t check-code -V
 
-  #~ wx-latest-windows:
+  ubuntu-wx-pip-4-1-1:
+    runs-on: ubuntu-22.04
+    defaults:
+      run:
+        shell: bash
+
+    steps:
+      - name: checkout
+        uses: actions/checkout@v3
+
+      - name: setup dependencies
+        run: |
+          sudo apt install libgtk-3-dev
+          python3 -m pip install pylint mypy attrdict3
+          # build fails if attrdict is not installed before preparing wxPython
+          python3 -m pip install wxPython==4.1.1
+
+      - name: check code
+        run: python3 build.py -t check-code -V
+
+  #~ windows-wx-pip:
     #~ runs-on: windows-2019
     #~ defaults:
       #~ run:
@@ -88,7 +88,7 @@ jobs:
       #~ - name: check code
         #~ run: python build.py -t check-code -V
 
-  wx-latest-msys:
+  msys-wx-pacman:
     runs-on: windows-2019
     defaults:
       run:
