Set Makefile executable

--- a/build.conf
+++ b/build.conf
@@ -17,8 +17,8 @@ files_extra = README.md;INFO
 dirs_dist_py = dbr;f_export;fields;globals;input;lib;startup;system;tests;ui;util;wiz;wizbin
 dirs_dist_data = bitmaps;data;debian;docs;locale;man;scripts;templates
 files_dist_py = command_line.py
-files_dist_exe = init.py;build.py
-files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;Makefile;README.md;TODO.txt;.mypy.ini;.pylintrc
+files_dist_exe = init.py;build.py;Makefile
+files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;README.md;TODO.txt;.mypy.ini;.pylintrc
 
 dirs_bdist_data = docs;man
 files_bdist_data = LICENSE.txt
