Clean up Python byte code with clean build task

--- a/build.conf
+++ b/build.conf
@@ -29,3 +29,6 @@ dbp_mime_prefix = application
 
 # info for Debian changelog
 deb_info = dist=jammy;author=Jordan Irwin;email=antumdeluge@gmail.com;urgency=low
+
+# *.pyc file cleanup
+exclude_clean_dirs = .git;.github;.mypy_cache
