--- a/.github/workflows/code_quality.yml
+++ b/.github/workflows/code_quality.yml
@@ -9,23 +9,23 @@ on:
   workflow_dispatch:
 
 jobs:
-  ubuntu-wx-apt:
-    runs-on: ubuntu-22.04
-    defaults:
-      run:
-        shell: bash
+  #~ ubuntu-wx-apt:
+    #~ runs-on: ubuntu-22.04
+    #~ defaults:
+      #~ run:
+        #~ shell: bash
 
-    steps:
-      - name: checkout
-        uses: actions/checkout@v3
+    #~ steps:
+      #~ - name: checkout
+        #~ uses: actions/checkout@v3
 
-      - name: setup dependencies
-        run: |
-          sudo apt install python3-wxgtk4.0
-          python3 -m pip install pylint mypy
+      #~ - name: setup dependencies
+        #~ run: |
+          #~ sudo apt install python3-wxgtk4.0
+          #~ python3 -m pip install pylint mypy
 
-      - name: check code
-        run: python3 build.py -t check-code -V
+      #~ - name: check code
+        #~ run: python3 build.py -t check-code -V
 
   ubuntu-wx-pip:
     runs-on: ubuntu-22.04
