Update Debian dependencies

--- a/debian/control
+++ b/debian/control
@@ -2,16 +2,16 @@ Source: debreate
 Section: devel
 Priority: optional
 Maintainer: Jordan Irwin <antumdeluge@gmail.com>
-Build-Depends: debhelper (>=10), python3
+Build-Depends: debhelper (>=10), python3 (>=3.10)
 Standards-Version: 3.9.7
 Homepage: https://debreate.github.io/
 X-Python-Version: >= 3.10
 
 Package: debreate
 Architecture: all
-Depends: ${misc:Depends}, python3, python3-wxgtk4.1|python3-wxgtk4.0 (>=4.0.7)|python3-pip, fakeroot, dpkg (>=1.0.0), file, util-linux (>=2.0.0), debianutils (>=4.0.0)
-Recommends: python3-wxgtk4.1 (>=4.1.1), lintian, xdg-utils, man-db, gzip (>=1.0), binutils, x11-server-utils
-Suggests: gdebi|gdebi-kde
+Depends: ${misc:Depends}, python3 (>=3.10, python3-wxgtk4.2|python3-wxgtk4.1|python3-wxgtk4.0 (>=4.0.7)|python3-pip, fakeroot, dpkg (>=1.0.0), util-linux (>=2.0.0), debianutils (>=4.0.0)
+Recommends: file, lintian, xdg-utils, man-db, gzip (>=1.0), binutils, x11-server-utils
+Suggests: gdebi|gdebi-kde|qapt-deb-installer
 Description: Debian Package Builder
  Debreate is a utility to aid in creating installable Debian packages (.deb).
  .
