Disable mypy error code resulting in false-positive

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -2,6 +2,7 @@
 exclude = .git/|.github/|build/|debian/|scripts/
 allow_untyped_globals = True
 allow_redefinition = True
+disable_error_code = attr-defined
 
 [mypy-wx.*]
 ignore_missing_imports = True
