Disable checking wget module with mypy

--- a/.mypy.ini
+++ b/.mypy.ini
@@ -4,6 +4,9 @@ allow_untyped_globals = True
 allow_redefinition = True
 disable_error_code = attr-defined
 
+[mypy-wget.*]
+ignore_missing_imports = True
+
 [mypy-wx.*]
 ignore_missing_imports = True
 
