--- a/build.conf
+++ b/build.conf
@@ -1,12 +1,12 @@
 
+# app details
 package = debreate
-description = Debian package builder
+description = Debian Package Builder
 version = 0.8
 version_dev = 5
 
 # files for installation
 executable = init.py
-files_app = command_line.py
 dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wiz;wizbin
 dirs_data = bitmaps;templates
 files_doc = LICENSE.txt;docs/changelog.txt;docs/usage.pdf
@@ -16,7 +16,6 @@ files_extra = README.md;INFO
 # files for distribution
 dirs_dist_py = dbr;f_export;fields;globals;input;lib;startup;system;tests;ui;util;wiz;wizbin
 dirs_dist_data = bitmaps;data;debian;docs;locale;man;scripts;templates
-files_dist_py = command_line.py
 files_dist_exe = init.py;build.py;Makefile
 files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;README.md;TODO.txt;.mypy.ini;.pylintrc
 
