--- a/build.conf
+++ b/build.conf
@@ -7,14 +7,14 @@ version_dev = 6
 
 # files for installation
 executable = init.py
-dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wiz;wizbin
+dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wizbin
 dirs_data = bitmaps;templates
 files_doc = LICENSE.txt;docs/changelog.txt;docs/usage.pdf
 files_man = man/man1/debreate.1
 files_extra = README.md;INFO
 
 # files for distribution
-dirs_dist_py = dbr;f_export;fields;globals;input;lib;startup;system;tests;ui;util;wiz;wizbin
+dirs_dist_py = dbr;f_export;fields;globals;input;lib;startup;system;tests;ui;util;wizbin
 dirs_dist_data = bitmaps;data;debian;docs;locale;man;scripts;templates
 files_dist_exe = init.py;build.py;Makefile
 files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;README.md;TODO.txt;.mypy.ini;.pylintrc
