--- a/build.conf
+++ b/build.conf
@@ -11,13 +11,13 @@ dirs_app = dbr;f_export;fields;globals;input;lib;startup;system;ui;util;wizbin
 dirs_data = bitmaps;templates
 files_doc = LICENSE.txt;docs/changelog.txt;docs/usage.pdf
 files_man = man/man1/debreate.1
-files_extra = README.md;INFO
+files_extra = README.md
 
 # files for distribution
 dirs_dist_py = dbr;f_export;fields;globals;input;lib;startup;system;tests;ui;util;wizbin
 dirs_dist_data = bitmaps;data;debian;docs;locale;man;scripts;templates
 files_dist_exe = init.py;build.py;Makefile
-files_dist_data = BUGS.txt;build.conf;INFO;LICENSE.txt;README.md;TODO.txt;.mypy.ini;.pylintrc
+files_dist_data = BUGS.txt;build.conf;LICENSE.txt;README.md;TODO.txt;.mypy.ini;.pylintrc
 
 dirs_bdist_data = docs;man
 files_bdist_data = LICENSE.txt
