--- a/build.conf
+++ b/build.conf
@@ -27,7 +27,7 @@ dbp_mime = x-dbp
 dbp_mime_prefix = application
 
 # info for Debian changelog
-deb_info = dist=jammy;author=Jordan Irwin;email=antumdeluge@gmail.com;urgency=low
+deb_info = dist=unstable;author=Jordan Irwin;email=antumdeluge@gmail.com;urgency=low
 
 # *.pyc file cleanup
 exclude_clean_dirs = .git;.github;.mypy_cache
